# bevy-quic-bingo

./: .gitignore  Cargo.toml  README.md
assets/bingo/: board.layout
src/client/: connecting.rs  fit_text.rs  game_ui.rs  main.rs  menu_ui.rs  scoped.rs  states.rs  storage.rs  teams.rs  userdata.rs
src/client/ui/: mod.rs
src/client/util/: mod.rs
src/common/: bingo.rs  lib.rs  mod.rs  protocol.rs  teams.rs
src/common/bingo/: mod.rs
src/server/: main.rs
