[package]
name = "bingo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bingo-server"
path = "src/server/main.rs"

[[bin]]
name = "bingo-client"
path = "src/client/main.rs"

[dependencies]
bevy = "0.12.1"
bevy_quinnet = "0.6.0"
rand = "0.8.5"
serde = "1.0.196"
thiserror = "1.0.57"
toml = { version = "0.8.10", features = ["display", "parse"] }
tokio = { version = "1.29.1", features = ["sync"] }
bevy_simple_text_input = { git = "https://github.com/rparrett/bevy_simple_text_input", rev = "b94f978ed4249c873177c822a278bf623ba96c86" }
bevy_egui = "0.24.0"
egui = "0.26.1"

[profile.dev.package."*"]
debug = false
opt-level = 3
debug-assertions = false
overflow-checks = false
